--- a/package.json
+++ b/package.json
@@ -11,37 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.3",
-    "@angular/common": "~8.1.3",
-    "@angular/compiler": "~8.1.3",
-    "@angular/core": "~8.1.3",
-    "@angular/forms": "~8.1.3",
-    "@angular/platform-browser": "~8.1.3",
-    "@angular/platform-browser-dynamic": "~8.1.3",
-    "@angular/router": "~8.1.3",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "@angular-material-components/datetime-picker": "^4.0.1",
+    "@angular/animations": "~10.0.8",
+    "@angular/cdk": "^10.1.2",
+    "@angular/common": "~10.0.8",
+    "@angular/compiler": "~10.0.8",
+    "@angular/core": "~10.0.8",
+    "@angular/forms": "~10.0.8",
+    "@angular/localize": "^10.0.8",
+    "@angular/material": "^10.1.2",
+    "@angular/platform-browser": "~10.0.8",
+    "@angular/platform-browser-dynamic": "~10.0.8",
+    "@angular/router": "~10.0.8",
+    "ngx-material-timepicker": "^5.5.3",
+    "rxjs": "~6.6.2",
+    "sweetalert": "^2.1.2",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
-    "@angular/cli": "~8.1.3",
-    "@angular/compiler-cli": "~8.1.3",
-    "@angular/language-service": "~8.1.3",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/cli": "~10.0.5",
+    "@angular/compiler-cli": "~10.0.8",
+    "@angular/language-service": "~10.0.8",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.7"
   }
 }
